あれから滅茶苦茶修正した
■モード構造を見据えての大幅修正。
これ以上の修正は恐らくない筈（たぶん、きっと、おそらく）

■バグ
・エンダーチ"ェ"ストが開きっぱなしになる。
・対象に近付いて効果を発揮するAIが、近付ききれずに発揮されないことが稀によくある。